--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -1,2 +1,14 @@
+@import url('https://fonts.googleapis.com/css2?family=Kdam+Thmor+Pro&display=swap');
+
 #main {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+
+	font-family: 'Kdam Thmor Pro', sans-serif;
+	color: lightgray;
+
+	height: 100vh;
+	width: 100%;
+	background-color: #3a342f;
 }
