--- a/src/components/Control.module.scss
+++ b/src/components/Control.module.scss
@@ -1,45 +1,37 @@
-.ib::before,
-.ibc::before {
-	display: inline-block;
-	height: 1em;
-	width: 1em;
-	vertical-align: -0.125em;
-	content: '';
+@import '/src/styles/variables';
+@import '/src/styles/mixins';
+
+#control {
+	display: flex;
+	flex-direction: column;
+	height: 90vmin;
+	margin-left: 100px;
 }
 
-.ib::before {
-	background: currentColor;
-	mask-image: var(--url);
-	mask-repeat: no-repeat;
-	mask-position: center;
-	-webkit-mask-image: var(--url);
-	-webkit-mask-repeat: no-repeat;
-	-webkit-mask-position: center;
+#title {
+	font-size: 3rem;
+	font-weight: bold;
+	text-shadow: 0 0 1rem black;
+	margin: 0 0 2rem;
+	animation: colorChange infinite 10s ease-in-out;
 }
 
-.ibc::before {
-	background-image: var(--url);
-	background-size: contain;
-	background-position: 50% 50%;
-	background-repeat: no-repeat;
+#counterContainer {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	width: min-content;
 }
 
-/* Html: <i class="ib ls-arrowup"></i> */
-.up {
-	--url: url('data:image/svg+xml,%3csvg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 718 694%22%3e%3cpath d=%22M251.378 694h215c26 0 45-20 45-46V398h170c16 0 28-8 34-23c2-5 2-8 2-12c0-10-3-18-10-25l-324-323c-11-15-36-14-50 0l-323 323c-22 20-7 60 26 60h171v250c0 26 18 46 44 46z%22 fill=%22currentColor%22/%3e%3c/svg%3e');
+#counter {
+	display: flex;
+	align-items: center;
+	gap: 1rem;
 }
 
-/* Html: <i class="ib ls-arrowdown"></i> */
-.down {
-	--url: url('data:image/svg+xml,%3csvg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 718 690%22%3e%3cpath d=%22M466 0H251c-26 0-45 20-45 46v250H36c-16 0-27 7-34 22c-1 5-2 9-2 12c0 10 3 19 10 26l324 323c12 15 36 14 50 0l323-323c22-20 7-60-26-60H510V46c0-26-18-46-44-46z%22 fill=%22currentColor%22/%3e%3c/svg%3e');
+#startBtn {
+	width: 100%;
 }
 
-/* Html: <i class="ib ls-arrowleft"></i> */
-.left {
-	--url: url('data:image/svg+xml,%3csvg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 690 719%22%3e%3cpath d=%22M689.13 466V251c0-26-19-45-45-45h-250V36c0-16-8-27-22-34c-5-1-10-2-14-2c-10 0-18 3-24 10l-324 324c-14 12-13 36 0 50l324 324c20 22 60 7 60-26V510h250c26 0 45-18 45-44z%22 fill=%22currentColor%22/%3e%3c/svg%3e');
-}
-
-/* Html: <i class="ib ls-arrowright"></i> */
-.right {
-	--url: url('data:image/svg+xml,%3csvg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 690 718%22%3e%3cpath d=%22M0 251v215c0 26 19 45 46 45h250v172c0 16 7 26 22 33c4 1 9 2 13 2c10 0 18-3 25-10l323-325c14-12 14-36 0-50L356 11c-20-22-60-8-60 25v171H46c-27 0-46 18-46 44z%22 fill=%22currentColor%22/%3e%3c/svg%3e');
+#arrows {
 }
