--- a/src/components/Control.module.scss
+++ b/src/components/Control.module.scss
@@ -27,6 +27,17 @@
 	display: flex;
 	align-items: center;
 	gap: 1rem;
+	background-color: #60564d;
+	border-radius: 1rem;
+	padding: 0.75rem 1rem;
+	margin-bottom: 1rem;
+	box-shadow: inset 0.25rem 0.25rem 1rem 0.5rem #3a342f;
+
+	& > p {
+		margin: 0;
+		width: 1rem;
+		text-align: center;
+	}
 }
 
 #startBtn {
