--- a/src/components/Control.module.scss
+++ b/src/components/Control.module.scss
@@ -4,16 +4,26 @@
 #control {
 	display: flex;
 	flex-direction: column;
-	height: 90vmin;
 	margin-left: 100px;
+	height: 85vh;
 }
 
 #title {
 	font-size: 3rem;
 	font-weight: bold;
 	text-shadow: 0 0 1rem black;
-	margin: 0 0 2rem;
+	text-align: end;
+	margin: 1rem 2rem 0;
 	animation: colorChange infinite 10s ease-in-out;
+}
+
+#controlContainer {
+	flex-grow: 1;
+	width: 30vw;
+	padding: 2rem;
+	background-color: #4d453f;
+	border-radius: 2rem;
+	box-shadow: 0 0 10vmin 0px #222;
 }
 
 #counterContainer {
@@ -27,11 +37,8 @@
 	display: flex;
 	align-items: center;
 	gap: 1rem;
-	background-color: #60564d;
-	border-radius: 1rem;
 	padding: 0.75rem 1rem;
 	margin-bottom: 1rem;
-	box-shadow: inset 0.25rem 0.25rem 1rem 0.5rem #3a342f;
 
 	& > p {
 		margin: 0;
