--- a/src/components/Board.module.scss
+++ b/src/components/Board.module.scss
@@ -1,6 +1,19 @@
 @import '/src/styles/variables';
 @import '/src/styles/mixins';
 
+#main {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+
+	font-family: 'Kdam Thmor Pro', sans-serif;
+	color: lightgray;
+
+	height: 100vh;
+	width: 100%;
+	background-color: #3a342f;
+}
+
 #board {
 	display: flex;
 	flex-direction: column;
@@ -31,6 +44,7 @@
 }
 
 .fenced {
+	filter: brightness(0.5);
 }
 
 .red {
