--- a/src/components/Game.module.scss
+++ b/src/components/Game.module.scss
@@ -32,25 +32,22 @@
 
 #controlContainer {
 	flex-grow: 1;
-	width: 30vw;
+	width: 20vw;
 	padding: 2rem;
 	background-color: #4d453f;
 	border-radius: 2rem;
 	box-shadow: 0 0 10vmin 0px #222;
 }
 
-#status {
-	margin: 0 0 1rem;
-}
-
 #moveControl {
 	display: flex;
-	width: min-content;
 	flex-direction: column;
-	align-items: flex-start;
-	gap: 1rem;
+	gap: 2rem;
 
-	& > button {
-		width: 9rem;
+	& > div {
+		display: flex;
+		align-items: center;
+		justify-content: space-between;
+		gap: 2rem;
 	}
 }
