--- a/src/components/Button.module.scss
+++ b/src/components/Button.module.scss
@@ -33,3 +33,12 @@
 		background-color: transparent;
 	}
 }
+
+.radio {
+	background-color: transparent;
+	color: inherit;
+	text-align: start;
+	border-radius: 0.5rem;
+	padding: 0.5rem;
+	font-weight: normal;
+}
