--- a/src/components/Game.module.scss
+++ b/src/components/Game.module.scss
@@ -16,7 +16,7 @@
 
 #score {
 	width: 8rem;
-	height: 80vh;
+	height: 85vh;
 	display: flex;
 	flex-direction: column;
 	gap: 1rem;
@@ -43,7 +43,7 @@
 
 #controlContainer {
 	flex-grow: 1;
-	width: 20vw;
+	width: 25vw;
 	padding: 2rem;
 	background-color: #4d453f;
 	border-radius: 2rem;
@@ -61,6 +61,11 @@
 		justify-content: space-between;
 		gap: 2rem;
 	}
+}
+
+#status {
+	margin-top: 0;
+	margin-bottom: -2rem;
 }
 
 .red {
